# rustfs-launcher

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.bat  build.sh  styles.css
src/: app.rs  logs.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  process.rs  state.rs
